<resources>
    <string name="app_name">Attendance Tracker</string>
    <string name="create_a_course">Create a course</string>
    <string name="course_name">Course name</string>
    <string name="save">Save</string>
    <string name="select_schedule_of_classes">Select schedule of classes</string>
    <string name="ok">OK</string>
    <string name="error_course_name_blank">Course name can\'t be blank</string>
    <string name="error_no_classes_for_course">Add at least one class for this course</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="course_detail_card_transition" translatable="false">course_details_card_%1$d</string>
    <string name="course_detail_page_transition" translatable="false">course_details_page</string>

    <string name="app_theme_key"  translatable="false">app_theme</string>
    <string name="app_theme_title">App Theme</string>
    <string name="pure_dark_key"  translatable="false">pure_dark</string>
    <string name="pure_dark_title">Pure Dark in Dark Theme</string>
    <string name="material_you_dynamic_color_key" translatable="false">material_you_dynamic_color</string>
    <string name="material_you_dynamic_color_title">Material You Dynamic Color</string>
    <string name="theming_category_title">Theming</string>
    <string name="default_main_pager_tab_key"  translatable="false">default_main_pager_tab</string>
    <string name="default_main_page_tab_title">Default Main Page Tab</string>
    <string name="settings">Settings</string>
    <string name="time_format">Time Format</string>
    <string name="date_format">Date Format</string>
    <string name="double_repr">%.2f%%</string>


    <string-array name="theme_entries"  translatable="false">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string-array name="theme_entries_values">
        <item>Follow System theme</item>
        <item>Light theme</item>
        <item>Dark theme</item>
    </string-array>


    <string-array name="default_main_pager_tab_entries"  translatable="false">
        <item>today</item>
        <item>overall</item>
    </string-array>
    <string-array name="default_main_pager_tab_entries_values">
        <item>Today</item>
        <item>Overall</item>
    </string-array>

    <string-array name="date_format_choices" translatable="false">
        <item>d MMM, yyyy</item>
        <item>EEEE, MMMM d, yyyy</item>
        <item>MM/dd/yyy</item>
        <item>MMM dd, yyyy</item>
        <item>dd MMMM yyy</item>
    </string-array>
    <string-array name="time_format_choices" translatable="false">
        <item>hh:mm a</item>
        <item>HH:mm</item>
    </string-array>
    <string-array name="view_course_tabs">
        <item>Course Info</item>
        <item>Extra Classes</item>
        <item>Attendance Record</item>
    </string-array>

    <string-array name="add_schedule_class_bottom_sheet_tabs">
        <item>Weekday</item>
        <item>Start Time</item>
        <item>End Time</item>
    </string-array>

    <string-array name="add_extra_class_bottom_sheet_tabs">
        <item>Date</item>
        <item>Start Time</item>
        <item>End Time</item>
    </string-array>

    <string name="attendance_status_setter_info">Set Attendance Status for %1$s from %2$s to %3$s%4$s %5$s</string>
    <string name="attendance_status_setter_info_extra_class">(Extra class)</string>
    <string name="attendance_status_setter_info_on_date">&#32;on %1$s</string>
    <string name="time_range">%1$s to %2$s</string>
    <string name="scheduled_class">Scheduled Class</string>
    <string name="extra_class">Extra Class</string>

    <string name="delete_course_dialog_title">Delete course: %1$s</string>
    <string name="delete_course_dialog_description">Do you really want to delete this course item? You\'ll lose all the data associated with this course.</string>

    <string name="required_percentage_detail">Required Attendance: %1$d</string>
    <string name="schedule_class_weekday_and_start_end_time">%1$s; %2$s to %3$s</string>
    <string name="delete_extra_class_dialog_title">Delete extra class?</string>
    <string name="delete_extra_class_dialog_description">Do you really want to delete the extra class on %1$s from %2$s to %3$s</string>

    <string name="presents_count">Presents: %1$d</string>
    <string name="absents_count">Absents: %1$d</string>
    <string name="cancelled_classes_count">Cancelled classes: %1$d</string>

    <string name="edit_course_screen_title">Edit details for %1$s</string>
    <string name="previous_course_name">Previous name: %1$s</string>
    <string name="previous_value_int_percentage">Previous value:: %d%%</string>
    <string name="required_attendance_updated_int_percentage">Required Attendance updated: %d%%</string>

    <string name="app_theme">App Theme</string>
    <string name="go_back_screen">Go to previous screen</string>
    <string name="look_and_feel">Look and Feel</string>
    <string name="custom_color_scheme_seed">Custom Color Scheme Seed</string>
    <string name="follow_system_colors">Follow System Colors</string>
    <string name="pure_black_background">Pure black background</string>
    <string name="follow_system">Follow System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="custom_color_scheme_seed_summary">Color to generate color scheme from</string>
    <string name="date_time_formatting">Date Time Formatting</string>
    <string name="default_home_tab">Default Home Tab</string>
    <string name="today_classes">Today\'s Classes</string>
    <string name="other_ui_options">Other UI Options</string>
    <string name="about">About</string>
    <string name="source_code">Source Code</string>
    <string name="author_info">Author: Rahul Gill</string>
    <string name="clear_text">Clear text</string>
    <string name="required_attendance_text">"Required Attendance: %1$d%%"</string>
    <string name="add_class">Add Class</string>
    <string name="remove_class">Remove Class</string>
    <string name="courses">Courses</string>
    <string name="no_classes_today">No classes today</string>
    <string name="no_courses_added_yet">No courses added yet</string>
    <string name="course_created">Course %1$s Created</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="cancelled">Cancelled</string>
    <string name="not_set">Not Set</string>
    <string name="current_attendance_percentage">Current Attendance Percentage</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="required_attendance_percentage">Required Attendance Percentage</string>
    <string name="deleted_schedule_item">Deleted schedule item</string>
    <string name="delete_schedule_item">Delete schedule item</string>
    <string name="delete_schedule_item_with_details">Delete schedule item on %1$s from %2$s to %3$s</string>
    <string name="add_class_on_this_scheduele">Add class on this schedule</string>
    <string name="course_x_attendance_records">%1$s Attendance Records</string>
    <string name="delete_record">Delete Record</string>
    <string name="delete">Delete</string>
    <string name="err_end_time_should_be_after_start_time">End time should come after start time</string>
    <string name="select_weekday_start_time_and_end_time_for_the_new_class">Select weekday, start time and end time for the new class</string>
    <string name="tip">Tip</string>
    <string name="course_updated">Course Updated</string>
    <string name="add_schedule_item">Add schedule item</string>
    <string name="delete_schedule_item_behaviour">Deleting schedule item will delete attendance records related to it</string>
    <string name="delete_attendance_records_too">Delete related attendance records too</string>
    <string name="only_delete_schedule_item">Only delete schedule item</string>
    <string name="exclude_schedule_item_from_schedule">Exclude schedule item from schedule</string>
    <string name="include_schedule_item_from_schedule">Include schedule item to schedule</string>
    <string name="excluded_from_schedule">Excluded from schedule</string>
    <string name="behaviour">Behaviour</string>
    <string name="unset_classes_behaviour">Unset classes behaviour</string>
    <string name="consider_as_presents">Consider as presents</string>
    <string name="consider_as_absents">Consider as Absents</string>
    <string name="do_nothing">Do nothing</string>
    <string name="can_be_absent_in_n_classes">Can be absent in %1$d classes</string>
    <string name="need_to_attend_n_more_classes">Need to attend %1$d more classes</string>
    <string name="cannot_miss_next_class">Cannot miss next claas</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Notification strings -->
    <string name="notification_channel_name">Class Reminders</string>
    <string name="notification_channel_description">Notifications for upcoming classes 5 minutes before they start</string>
    <string name="notification_body">%1$s – %2$s</string>
    <string name="mark_present">Present</string>
    <string name="mark_absent">Absent</string>
    <string name="mark_cancelled">Cancelled</string>
    <string name="notifications">Notifications</string>
    <string name="class_reminders">Class Reminders</string>
    <string name="class_reminders_summary">Get notified 5 minutes before each class</string>

    <!-- Onboarding strings -->
    <string name="welcome_to_attendance_tracker">Welcome to Attendance Tracker</string>
    <string name="onboarding_description">Track your class attendance easily and get reminders for upcoming classes.</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>

    <!-- Import/Export strings -->
    <string name="data">Data</string>
    <string name="import_export">Import / Export</string>
    <string name="import_export_summary">Backup or restore your course data</string>
    <string name="copy">Copy</string>
    <string name="import_data">Import</string>
    <string name="export_copied">Data copied to clipboard</string>
    <string name="clipboard_pasted">Attendance Tracker pasted from clipboard</string>
    <string name="import_success">Data imported successfully</string>
    <string name="import_failed">Import failed: invalid data</string>
    <string name="import_warning">Warning: importing will replace all existing data</string>

</resources>

