<?xml version="1.0" encoding="utf-8"?>
<RadioGroup android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioButton
        android:id="@+id/monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday"/>
    <RadioButton
        android:id="@+id/tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"/>
    <RadioButton
        android:id="@+id/wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"/>
    <RadioButton
        android:id="@+id/thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday"/>
    <RadioButton
        android:id="@+id/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday"/>
    <RadioButton
        android:id="@+id/saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturday"/>
    <RadioButton
        android:id="@+id/sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunday"/>
</RadioGroup>